# Resource_Management_CPP_Example

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: example.cpp  my_pack_config.json
